--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
         "deploy": "vercel --prod"
     },
     "dependencies": {
-        "@vercel/node": "^3.0.0",
-        "@octokit/rest": "^20.0.0"
+        "@octokit/rest": "^22.0.0",
+        "@vercel/node": "^5.3.24"
     },
     "devDependencies": {
-        "@types/node": "^20.0.0",
+        "@types/node": "^24.6.2",
         "typescript": "^5.0.0",
-        "vercel": "^32.0.0"
+        "vercel": "^48.1.6"
     },
     "engines": {
         "node": "22.x"
