--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
             "ES2020",
             "DOM"
         ],
-        "module": "CommonJS",
+        "module": "ESNext",
         "moduleResolution": "node",
         "strict": true,
         "esModuleInterop": true,
@@ -13,7 +13,7 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
+        "noEmit": false,
         "declaration": true,
         "outDir": "./dist",
         "rootDir": "./",
